--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html data-ng-app="App" data-ng-controller="AppCtrl">
 <head>
-	<title>AngularJS Wizard</title>
+	<title>AngularJS Taco Party</title>
 	
 	<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.css" />
 	<link rel="stylesheet" type="text/css" href="app.css" />
@@ -10,31 +10,76 @@
 	<div class="modal" ng-cloak>
 		<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-			<h3>AngularJS Wizard</h3>
+			<h3>AngularJS Taco Party</h3>
 		</div>
 		<div class="modal-body">
 			<div>
 				<button class="btn" ng-class="{'btn-primary':stepIndex === 0}" data-ng-click="setCurrentStep(0)">Step One</button>
 				<button class="btn" ng-class="{'btn-primary':stepIndex === 1}" data-ng-click="setCurrentStep(1)">Step Two</button>
 				<button class="btn" ng-class="{'btn-primary':stepIndex === 2}" data-ng-click="setCurrentStep(2)">Step Three</button>
+				<p>{{mytest}}</p>
 				<div data-ng-switch="getCurrentStep()" data-ng-animate="'wave'" class="slide-frame">
 					<div data-ng-switch-when="one">
-						<h3>Step One</h3>
-						<p>
-							Bacon ipsum dolor sit amet corned beef ground round chuck sausage. Brisket hamburger turducken, pork belly pork t-bone pig doner short loin fatback shankle. Hamburger turkey kielbasa drumstick brisket filet mignon shank sirloin fatback chicken. Shank ribeye pork belly rump, pastrami spare ribs ham hock t-bone turducken sausage drumstick. Biltong ground round frankfurter chicken tongue swine capicola brisket pastrami turducken rump pork. Tongue beef ribs filet mignon pork loin, turkey andouille short ribs.
-						</p>
+						<fieldset>  
+							<div class="control-group">  
+								<label class="control-label" for="firstName">First Name</label>  
+								<div class="controls">  
+									<input type="text" class="input-xlarge" id="firstName" ng-model="wizard.firstName">  
+								</div>  
+							</div>
+							<div class="control-group">  
+								<label class="control-label" for="lastName">Last Name</label>  
+								<div class="controls">
+									<input type="text" class="input-xlarge" id="lastName" ng-model="wizard.lastName">  
+								</div>  
+							</div> 
+							<div class="control-group">  
+								<div class="controls">  
+									<label class="checkbox">  
+										<input type="checkbox" id="optionsCheckbox" ng-model="wizard.coming">  
+										Are you coming to my taco party?
+									</label>  
+								</div>  
+							</div>  
+						</fieldset>  
 					</div>
 					<div data-ng-switch-when="two">
-						<h3>Step Two</h3>
-						<p>
-							Bacon ipsum dolor sit amet corned beef ground round chuck sausage. Brisket hamburger turducken, pork belly pork t-bone pig doner short loin fatback shankle. Hamburger turkey kielbasa drumstick brisket filet mignon shank sirloin fatback chicken. Shank ribeye pork belly rump, pastrami spare ribs ham hock t-bone turducken sausage drumstick. Biltong ground round frankfurter chicken tongue swine capicola brisket pastrami turducken rump pork. Tongue beef ribs filet mignon pork loin, turkey andouille short ribs.
-						</p>
+						<fieldset>  
+							<div class="control-group">  
+								<label class="control-label" for="select01">How Many Tacos?</label>  
+								<div class="controls">  
+									<select id="select01" ng-model="wizard.tacos">  
+										<option>Unlimited</option>  
+										<option>2</option>  
+										<option>3</option>  
+										<option>4</option>  
+										<option>5</option>  
+									</select>  
+								</div>  
+							</div>  
+							<div class="control-group">  
+								<label class="control-label" for="multiSelect">Toppings?</label>  
+								<div class="controls">  
+									<select multiple="multiple" id="multiSelect" ng-model="wizard.toppings">  
+										<option>Cheese</option>  
+										<option>Guacamole</option>  
+										<option>Mild Salsa</option>  
+										<option>Hot Salsa</option>  
+										<option>Cilantro</option>  
+									</select>  
+								</div>  
+							</div>  
+						</fieldset>  
 					</div>
 					<div data-ng-switch-when="three">
-						<h3>Step Three</h3>
-						<p>
-							Bacon ipsum dolor sit amet corned beef ground round chuck sausage. Brisket hamburger turducken, pork belly pork t-bone pig doner short loin fatback shankle. Hamburger turkey kielbasa drumstick brisket filet mignon shank sirloin fatback chicken. Shank ribeye pork belly rump, pastrami spare ribs ham hock t-bone turducken sausage drumstick. Biltong ground round frankfurter chicken tongue swine capicola brisket pastrami turducken rump pork. Tongue beef ribs filet mignon pork loin, turkey andouille short ribs.
-						</p>
+						<fieldset>  
+							<div class="control-group">  
+								<label class="control-label" for="textarea">Favorite Taco Memory</label>  
+								<div class="controls">  
+									<textarea class="input-xlarge" id="textarea" rows="8" ng-model="wizard.memory"></textarea>  
+								</div>  
+							</div>  
+						</fieldset>  
 					</div>
 				</div>	
 			</div>
