--- a/index.html
+++ b/index.html
@@ -1,96 +1,19 @@
 <!DOCTYPE html> 
-<html data-ng-app="App" data-ng-controller="AppCtrl">
+<html ng-app="App" ng-controller="AppCtrl">
 <head>
 	<title>AngularJS Taco Party</title>
 	
-	<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.css" />
+	<link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="app.css" />
 </head>
 <body>
-	<div class="modal" ng-cloak>
-		<div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-			<h3>AngularJS Taco Party</h3>
-		</div>
-		<div class="modal-body">
-			<div>
-				<button class="btn" ng-class="{'btn-primary':stepIndex === 0}" data-ng-click="setCurrentStep(0)">Step One</button>
-				<button class="btn" ng-class="{'btn-primary':stepIndex === 1}" data-ng-click="setCurrentStep(1)">Step Two</button>
-				<button class="btn" ng-class="{'btn-primary':stepIndex === 2}" data-ng-click="setCurrentStep(2)">Step Three</button>
-				<p>{{mytest}}</p>
-				<div data-ng-switch="getCurrentStep()" data-ng-animate="'wave'" class="slide-frame">
-					<div data-ng-switch-when="one">
-						<fieldset>  
-							<div class="control-group">  
-								<label class="control-label" for="firstName">First Name</label>  
-								<div class="controls">  
-									<input type="text" class="input-xlarge" id="firstName" ng-model="wizard.firstName">  
-								</div>  
-							</div>
-							<div class="control-group">  
-								<label class="control-label" for="lastName">Last Name</label>  
-								<div class="controls">
-									<input type="text" class="input-xlarge" id="lastName" ng-model="wizard.lastName">  
-								</div>  
-							</div> 
-							<div class="control-group">  
-								<div class="controls">  
-									<label class="checkbox">  
-										<input type="checkbox" id="optionsCheckbox" ng-model="wizard.coming">  
-										Are you coming to my taco party?
-									</label>  
-								</div>  
-							</div>  
-						</fieldset>  
-					</div>
-					<div data-ng-switch-when="two">
-						<fieldset>  
-							<div class="control-group">  
-								<label class="control-label" for="select01">How Many Tacos?</label>  
-								<div class="controls">  
-									<select id="select01" ng-model="wizard.tacos">  
-										<option>Unlimited</option>  
-										<option>2</option>  
-										<option>3</option>  
-										<option>4</option>  
-										<option>5</option>  
-									</select>  
-								</div>  
-							</div>  
-							<div class="control-group">  
-								<label class="control-label" for="multiSelect">Toppings?</label>  
-								<div class="controls">  
-									<select multiple="multiple" id="multiSelect" ng-model="wizard.toppings">  
-										<option>Cheese</option>  
-										<option>Guacamole</option>  
-										<option>Mild Salsa</option>  
-										<option>Hot Salsa</option>  
-										<option>Cilantro</option>  
-									</select>  
-								</div>  
-							</div>  
-						</fieldset>  
-					</div>
-					<div data-ng-switch-when="three">
-						<fieldset>  
-							<div class="control-group">  
-								<label class="control-label" for="textarea">Favorite Taco Memory</label>  
-								<div class="controls">  
-									<textarea class="input-xlarge" id="textarea" rows="8" ng-model="wizard.memory"></textarea>  
-								</div>  
-							</div>  
-						</fieldset>  
-					</div>
-				</div>	
-			</div>
-		</div>	
-		<div class="modal-footer">
-			<a class="btn" data-ng-click="handlePrevious()" data-ng-show="stepIndex !== 0">Back</a>
-			<a class="btn btn-primary" data-ng-click="handleNext()">{{getNextLabel()}}</a>
-		</div>		
+	<div class="well">
+		<button type="button" class="btn btn-large btn-primary ng-scope" bs-modal="'partials/wizard.html'" data-toggle="modal">AngularJS Wizard Demo</button>
 	</div>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	<script src="lib/angular.min.js"></script> 
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/0.7.2/angular-strap.min.js"></script>
 	<script src="app.js"></script> 
 </body>
 </html>
