--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="container">
 
       <form class="form-signin">
-        <h2 class="form-signin-heading">Launch the AngularJS Wizard</h2>
+        <h3>Launch the AngularJS Wizard</h3>
 		<div class="thumbnail">
 			<img src="images/nacho-libre.jpg" alt="Naaaaaaaaaaacho Libre!">
 		</div>
