And it just gets better!

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
 
 	<div class="container">
-
-      <form class="form-signin">
+      <div class="form-signin">
         <h3>Launch the AngularJS Wizard</h3>
 		<div class="thumbnail">
 			<img src="images/nacho-libre.jpg" alt="Naaaaaaaaaaacho Libre!">
@@ -18,7 +17,7 @@
 		<button type="button" class="btn btn-large btn-primary ng-scope" 
 			bs-modal="'partials/wizard.html'" 
 			data-toggle="modal">I Dare You!</button>
-      </form>
+      </div>
 	</div>
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
