--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html ng-app="App" ng-controller="AppCtrl">
-<head>
-	<title>AngularJS Taco Party</title>
-	
-	<link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="app.css" />
-</head>
-<body>
+    <head>
+        <title>AngularJS Taco Party</title>
 
-	<div class="container">
-      <div class="form-signin">
-        <h3>Launch the AngularJS Wizard</h3>
-				<div class="thumbnail">
-					<img src="images/nacho-libre.jpg" alt="Naaaaaaaaaaacho Libre!">
-				</div>
-				<button type="button" data-template="partials/wizard.html" class="btn btn-large btn-primary ng-scope" bs-modal>
-					I Dare You!
-				</button>
-      </div>
-	</div>
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="app.css"/>
+    </head>
+    <body>
 
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.1.5/angular-strap.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.1.5/angular-strap.tpl.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular-animate.min.js"></script>
-	<script src="app.js"></script>
-</body>
+        <div class="container">
+            <div class="form-signin">
+                <h3>Launch the AngularJS Wizard</h3>
+
+                <div class="thumbnail">
+                    <img src="images/nacho-libre.jpg" alt="Naaaaaaaaaaacho Libre!">
+                </div>
+                <button type="button" data-template="partials/wizard.html" class="btn btn-large btn-primary" bs-modal>
+                    I Dare You!
+                </button>
+            </div>
+        </div>
+
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular-animate.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>
+
+        <script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.1.5/angular-strap.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.1.5/angular-strap.tpl.min.js"></script>
+
+        <script src="app.js"></script>
+    </body>
 </html>
